--- a/configure_field_dialog.ui
+++ b/configure_field_dialog.ui
@@ -29,7 +29,7 @@
         <number>1</number>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>99999999</number>
        </property>
       </widget>
      </item>
@@ -46,7 +46,7 @@
         <number>1</number>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>99999999</number>
        </property>
       </widget>
      </item>
@@ -76,7 +76,7 @@
         <number>1</number>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>99999999</number>
        </property>
       </widget>
      </item>
