--- a/main_window.ui
+++ b/main_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Miner</string>
   </property>
   <widget class="QScrollArea" name="scrollArea"/>
   <widget class="QMenuBar" name="menubar">
