--- a/main_window.ui
+++ b/main_window.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>main_window</class>
+ <class>MainWindow</class>
  <widget class="QMainWindow" name="main_window">
   <property name="geometry">
    <rect>
